--- a/public/css/colr-public.css
+++ b/public/css/colr-public.css
@@ -2,3 +2,8 @@
  * All of the CSS for your public-facing functionality should be
  * included in this file.
  */
+
+.colr-demo{
+    width:50px;
+    height:50px;
+}
