--- a/admin/css/colr-admin.css
+++ b/admin/css/colr-admin.css
@@ -1,4 +1,6 @@
-/**
- * All of the CSS for your admin-specific functionality should be
- * included in this file.
- */
+.form-table#colr-options-map{
+    width:400px;
+}
+.wrap#colr-admin-display h1 {
+    margin:20px 0px 20px 0px;
+}
